# rapt2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
docs/: Lock.md  Repository.md  Source.md  caching.md  dependency.md  extended_states.md
src/: algorithm.rs  apt.rs  command.rs  context.rs  dpkg.rs  lib.rs  main.rs  net.rs  package.rs  source.rs  util.rs
src/algorithm/: dag.rs  graph.rs
src/apt/: extended_states.rs
src/command/: error.rs  rapt.rs  subcommand.rs
src/command/subcommand/: autoremove.rs  clean.rs  dep.rs  install.rs  list.rs  purge.rs  remove.rs  update.rs  upgrade.rs
src/dpkg/: client.rs  installer.rs  status.rs
src/net/: binary.rs  error.rs  package.rs
src/package/: client.rs  dpkg.rs  error.rs  package.rs  parser.rs  version.rs
src/source/: client.rs  error.rs  parser.rs  source.rs
tests/: dependencies_test.rs  package_client_test.rs  package_graph_test.rs  package_net_test.rs  source_client_test.rs
tests/helper/: mod.rs
tests/resources/dpkg/: status
tests/resources/lists/: test1_InRelease.list  test1_Packages  test3__Packages  test4__Packages
tests/resources/sources/: sources.list
tests/resources/sources/sources.list.d/: fuga.list  hoge.list  non-target.list.save
