[package]
name = "rapt2"
version = "0.1.0"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
thiserror = "1.0.0"
itertools = "0.10.3"
reqwest = { version = "0.11.8", features = ["gzip", "blocking"] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }