[package]
name = "rapt2"
version = "0.0.1"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.0"
itertools = "0.10.3"
reqwest = { version = "0.11.8", features = ["gzip", "blocking"] }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
clap = { version = "3.0.0-rc.8", features = ["derive"] }
indicatif = "0.16.2"
console = "0.15.0"
fs2 = "0.4.3"
users = "0.11.0"
glob = "0.3.0"
regex = "1"
lazy_static = "1.0.0"
once_cell = "1.0.0"
chrono = "0.4.19"
